darkmode, fixed bgs, dashboard logo
fixed darkmode so scrollbar and other elements change depending on darkmode setting on user browser. Gradient backgrounds seamless and change depending on the device. Added top left logo to dashboard page.

--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -1,3 +1,13 @@
+.example::-webkit-scrollbar {
+  display: none;
+}
+
+/* Hide scrollbar for IE, Edge and Firefox */
+.example {
+  -ms-overflow-style: none;  /* IE and Edge */
+  scrollbar-width: none;  /* Firefox */
+}
+
 .container {
   padding: 0 2rem;
 }
@@ -127,5 +137,4 @@
     filter: invert(1);
   }
 }
-
 
